--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSDA Semester 1 Dashboard | Sayeed</title>
+    <title>CSDA Semester 1 Dashboard</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -114,11 +114,15 @@
         #greeting-container h1 { font-size: 2.2em; font-weight: 800; margin: 0; }
         #greeting-container p { margin: 0; font-size: 1em; color: var(--text-secondary-color); }
 
+        .header-controls { display: flex; align-items: center; gap: 16px; }
         .theme-switcher { display: flex; align-items: center; gap: 8px; cursor: pointer; }
         #theme-toggle { display: none; }
         .toggle-track { width: 50px; height: 26px; background-color: var(--accent-light-color); border-radius: 13px; position: relative; }
         .toggle-thumb { width: 20px; height: 20px; background-color: var(--accent-color); border-radius: 50%; position: absolute; top: 3px; left: 3px; transition: transform 0.3s ease; }
         #theme-toggle:checked + .toggle-track .toggle-thumb { transform: translateX(24px); }
+        
+        #info-btn { font-size: 1.5em; cursor: pointer; color: var(--text-secondary-color); transition: color 0.2s ease; }
+        #info-btn:hover { color: var(--accent-color); }
 
         h2 { font-size: 1.5em; font-weight: 700; display: flex; align-items: center; gap: 12px; margin-top: 0; margin-bottom: 24px; color: var(--text-color); }
 
@@ -130,14 +134,12 @@
         }
 
         .bento-grid .card { padding: 24px; }
-        .card[data-grid-col="1"] { grid-column: span 1; }
         .card[data-grid-col="2"] { grid-column: span 2; }
         .card[data-grid-col="3"] { grid-column: span 3; }
-        .card[data-grid-col="4"] { grid-column: span 4; }
         .card[data-grid-col="6"] { grid-column: span 6; }
         
         @media (max-width: 1200px) {
-            .card[data-grid-col="1"], .card[data-grid-col="2"], .card[data-grid-col="3"], .card[data-grid-col="4"] { grid-column: span 3; }
+            .card[data-grid-col="2"], .card[data-grid-col="3"] { grid-column: span 3; }
         }
         @media (max-width: 768px) {
             .bento-grid .card { grid-column: span 6 !important; }
@@ -163,9 +165,26 @@
         .progress-bar { height: 8px; background-color: var(--accent-light-color); border-radius: 4px; overflow: hidden; }
         .progress-bar-inner { height: 100%; background-color: var(--accent-color); transition: width 0.5s ease; }
 
-        .link-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 16px; }
-        .link-card { background: var(--accent-light-color); padding: 16px; border-radius: 12px; text-decoration: none; color: var(--text-color); font-weight: 600; display: flex; align-items: center; gap: 12px; }
-        .link-card i { font-size: 1.2em; color: var(--accent-color); }
+        #link-grid-main { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 16px; }
+        .link-card {
+            background: transparent;
+            border: 1px solid var(--border-color);
+            padding: 16px;
+            border-radius: 12px;
+            text-decoration: none;
+            color: var(--text-color);
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            transition: background-color 0.2s ease, border-color 0.2s ease, transform 0.2s ease;
+        }
+        .link-card:hover {
+            background-color: var(--accent-light-color);
+            border-color: var(--accent-color);
+            transform: translateY(-2px);
+        }
+        .link-card i { font-size: 1.2em; color: var(--accent-color); width: 20px; text-align: center; }
 
         #timeline-container { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 16px; }
         .timeline-item { background: var(--accent-light-color); padding: 16px; border-radius: 12px; display: flex; flex-direction: column; }
@@ -175,22 +194,65 @@
         footer { text-align: center; padding: 20px; color: var(--text-secondary-color); }
         .libutton { display: inline-flex; align-items: center; justify-content: center; padding: 7px 20px; text-decoration: none !important; color: #ffffff !important; width: 200px; height: 40px; border-radius: 20px; background-color: #0A66C2; font-family: 'Plus Jakarta Sans', sans-serif; font-weight: 500; margin: 5px; transition: all 0.2s ease; }
         .github-btn { background-color: #24292e; }
+
+        .modal-overlay {
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px);
+            z-index: 1000; display: none; justify-content: center; align-items: center;
+            animation: fadeIn 0.3s ease;
+        }
+        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+        .modal-content { max-width: 600px; width: 90%; max-height: 80vh; overflow-y: auto; }
+        .modal-content input { width: 100%; padding: 12px; margin: 20px 0; border-radius: 8px; border: 1px solid var(--border-color); font-size: 1.1em; }
+        .modal-content button { padding: 12px 24px; border: none; background-color: var(--accent-color); color: white; font-weight: 600; border-radius: 8px; cursor: pointer; }
+        .modal-content h3 { margin-top: 0; }
+        .modal-content p { margin-bottom: 10px; line-height: 1.8; }
+        .modal-content strong { color: var(--accent-color); }
     </style>
 </head>
 <body>
     <div class="aurora-background"></div>
+
+    <div id="name-modal-overlay" class="modal-overlay">
+        <div id="name-modal" class="card modal-content">
+            <h2>What should we call you?</h2>
+            <input type="text" id="name-input" placeholder="Enter your name..." autofocus>
+            <button id="save-name-btn">Let's Go!</button>
+        </div>
+    </div>
+
+    <div id="info-modal-overlay" class="modal-overlay">
+        <div id="info-modal" class="card modal-content">
+            <h2 style="justify-content: space-between;">How to Use This Dashboard <i id="close-info-btn" class="fas fa-times" style="cursor:pointer;"></i></h2>
+            <h3>👋 Welcome!</h3>
+            <p>This is your personal command center for the semester. Here’s a quick guide to get you started.</p>
+            <h3>📊 The Dashboard</h3>
+            <p>The top cards like <strong>What's Next</strong>, <strong>Today's Focus</strong>, and <strong>Next Deadline</strong> are fully automatic. They use the current date to show you what's important right now. Don't worry if "What's Next" seems far away – it will update as the semester progresses!</p>
+            <h3>✅ Tracking Attendance</h3>
+            <p>In the <strong>Full Semester Schedule</strong> at the bottom, simply check the box in the "Status" column for each class you attend. Your <strong>Attendance Overview</strong> will update instantly, showing your progress and percentage.</p>
+            <h3>📝 Creating Tasks</h3>
+            <p>In the same schedule, type any reminder or to-do item in the "Notes" column for a class. A new task will automatically be created in your <strong>Active Task List</strong>. When you're done, just check it off in the task list!</p>
+            <h3>💾 Your Data is Safe</h3>
+            <p>All your data (attendance, tasks, and name) is saved securely in your browser's local storage. It will be here when you return, and it is completely private to you.</p>
+        </div>
+    </div>
+
     <div class="main-container">
         <header>
             <div id="greeting-container">
-                <h1>Welcome back, Sayeed</h1>
+                <h1 id="user-greeting">Welcome back,</h1>
                 <p id="live-clock"></p>
             </div>
-            <label for="theme-toggle" class="theme-switcher">
-                <i class="fas fa-sun"></i>
-                <input type="checkbox" id="theme-toggle">
-                <div class="toggle-track"><div class="toggle-thumb"></div></div>
-                <i class="fas fa-moon"></i>
-            </label>
+            <div class="header-controls">
+                <i id="info-btn" class="fas fa-info-circle" title="How to use this site"></i>
+                <label for="theme-toggle" class="theme-switcher">
+                    <i class="fas fa-sun"></i>
+                    <input type="checkbox" id="theme-toggle">
+                    <div class="toggle-track"><div class="toggle-thumb"></div></div>
+                    <i class="fas fa-moon"></i>
+                </label>
+            </div>
         </header>
 
         <div class="bento-grid">
@@ -214,7 +276,7 @@
             </div>
             <div class="card" data-grid-col="3">
                 <h2><i class="fas fa-link"></i> Quick Links</h2>
-                <div class="link-grid" id="link-grid-main"></div>
+                <div id="link-grid-main"></div>
             </div>
             <div class="card" data-grid-col="6">
                 <h2><i class="fas fa-calendar-check"></i> Academic Calendar</h2>
@@ -283,6 +345,7 @@
             startLiveClock();
             startCountdown();
             initializeTheme();
+            initializeUser();
             addEventListeners();
         }
 
@@ -402,8 +465,25 @@
             document.getElementById('link-grid-main').innerHTML = html;
         }
 
+        function parseTime(dateStr, timeStr) {
+            let [time, modifier] = timeStr.split(' ');
+            let [hours, minutes] = time.split(':');
+            hours = parseInt(hours);
+            if (modifier === 'PM' && hours < 12) hours += 12;
+            if (modifier === 'AM' && hours === 12) hours = 0;
+            const date = new Date(dateStr);
+            date.setHours(hours, parseInt(minutes), 0, 0);
+            return date;
+        }
+
         function renderWhatsNext() {
-            const nextClass = fullSchedule.find(entry => new Date(`${entry.date} ${entry.time.split(' - ')[0]}`) > new Date());
+            const now = new Date();
+            const nextClass = fullSchedule.find(entry => {
+                const endTimeStr = entry.time.split(' - ')[1];
+                const classEndTime = parseTime(entry.date, endTimeStr);
+                return classEndTime > now;
+            });
+
             if (nextClass) {
                 document.getElementById('next-class-name').textContent = `${courses[nextClass.courseCode].name} (${nextClass.type})`;
                 document.getElementById('next-class-time').textContent = `${nextClass.day}, ${nextClass.time}`;
@@ -451,6 +531,17 @@
             themeToggle.checked = savedTheme === 'dark';
         }
 
+        function initializeUser() {
+            const greetingH1 = document.getElementById('user-greeting');
+            let userName = localStorage.getItem('userName');
+            if (!userName) {
+                document.getElementById('name-modal-overlay').style.display = 'flex';
+                document.getElementById('name-input').focus();
+            } else {
+                greetingH1.innerHTML = `Welcome back, <span id="user-name" title="Click to edit name">${userName}</span>`;
+            }
+        }
+
         // --- EVENT HANDLING (DELEGATION) ---
         function addEventListeners() {
             document.getElementById('theme-toggle').addEventListener('change', (e) => {
@@ -458,6 +549,25 @@
                 document.documentElement.setAttribute('data-theme', theme);
                 localStorage.setItem('theme', theme);
             });
+
+            document.getElementById('info-btn').addEventListener('click', () => {
+                document.getElementById('info-modal-overlay').style.display = 'flex';
+            });
+            document.getElementById('close-info-btn').addEventListener('click', () => {
+                document.getElementById('info-modal-overlay').style.display = 'none';
+            });
+
+            document.getElementById('save-name-btn').addEventListener('click', () => {
+                const input = document.getElementById('name-input');
+                const newName = input.value.trim();
+                if (newName) {
+                    localStorage.setItem('userName', newName);
+                    document.getElementById('user-greeting').innerHTML = `Welcome back, <span id="user-name" title="Click to edit name">${newName}</span>`;
+                    document.getElementById('name-modal-overlay').style.display = 'none';
+                }
+            });
+             document.getElementById('name-input').addEventListener('keydown', (e) => { if (e.key === 'Enter') document.getElementById('save-name-btn').click(); });
+
 
             const mainContainer = document.querySelector('.main-container');
             mainContainer.addEventListener('change', handleMainContainerEvent);
@@ -508,9 +618,9 @@
             renderTasks();
             renderAttendanceBars();
         }
-        function saveData() { localStorage.setItem('csdaPlannerData_v7', JSON.stringify({ fullSchedule, tasks })); }
+        function saveData() { localStorage.setItem('csdaPlannerData_v11', JSON.stringify({ fullSchedule, tasks })); }
         function loadData() {
-            const data = localStorage.getItem('csdaPlannerData_v7');
+            const data = localStorage.getItem('csdaPlannerData_v11');
             return data ? JSON.parse(data) : null;
         }
 
