--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         <footer>
             <p>Made with ❤️ by Sayeed</p>
             <div>
-                <a class="libutton" href=" www.linkedin.com/comm/mynetwork/discovery-see-all?usecase=PEOPLE_FOLLOWS&followMember=sayeed-here target="_blank">Follow on LinkedIn</a>
+                <a class="libutton" href="https://www.linkedin.com/in/sayeed-here/" target="_blank">Follow on LinkedIn</a> 
                 <a class="libutton github-btn" href="https://github.com/SAYEEDHERE" target="_blank">Follow on GitHub</a>
             </div>
         </footer>
