--- a/index.html
+++ b/index.html
@@ -132,7 +132,6 @@
         .bento-grid {
             display: grid;
             grid-template-columns: repeat(6, 1fr);
-            grid-auto-rows: minmax(150px, auto);
             gap: 24px;
         }
 
@@ -245,10 +244,23 @@
                 text-align: left;
             }
         }
-        @media (min-width: 1200px) {
-            .card[data-grid-col-lg="2"] { grid-column: span 2; }
-            .card[data-grid-col-lg="3"] { grid-column: span 3; }
-            .card[data-grid-col-lg="4"] { grid-column: span 4; }
+        @media (max-width: 1024px) {
+            .card[data-grid-col="2"],
+            .card[data-grid-col="3"] {
+                grid-column: span 3; /* Two cards per row on tablets */
+            }
+        }
+        @media (max-width: 768px) {
+            .bento-grid {
+                grid-template-columns: 1fr; /* Single column on mobile */
+            }
+            .card[data-grid-col="2"],
+            .card[data-grid-col="3"],
+            .card[data-grid-col="6"] {
+                grid-column: span 1; /* Each card takes full width */
+            }
+            #greeting-container h1 { font-size: 1.8em; }
+            .info-card .value { font-size: 1.5em; }
         }
     </style>
 </head>
@@ -327,25 +339,25 @@
         </header>
 
         <div class="bento-grid">
-            <div class="card info-card" data-grid-col="2" data-grid-col-lg="2">
+            <div class="card info-card" data-grid-col="2">
                 <h3><i class="fas fa-forward"></i> What's Next?</h3>
                 <div class="value" id="next-class-name">Loading...</div>
                 <div id="next-class-time"></div>
             </div>
-            <div class="card info-card" data-grid-col="2" data-grid-col-lg="2">
+            <div class="card info-card" data-grid-col="2">
                 <h3><i class="fas fa-stopwatch"></i> Next Deadline</h3>
                 <div class="value" id="countdown-timer">--:--:--</div>
                 <div id="next-deadline-name">Loading...</div>
             </div>
-            <div class="card" data-grid-col="2" data-grid-col-lg="2">
+            <div class="card" data-grid-col="2">
                 <h2><i class="fa-solid fa-bullseye"></i> Today's Focus</h2>
                 <div id="today-focus-list"></div>
             </div>
-            <div class="card" data-grid-col="3" data-grid-col-lg="3">
+            <div class="card" data-grid-col="3">
                 <h2><i class="fas fa-chart-pie"></i> Attendance Overview</h2>
                 <div id="attendance-bars" style="display: grid; gap: 16px;"></div>
             </div>
-            <div class="card" data-grid-col="3" data-grid-col-lg="3">
+            <div class="card" data-grid-col="3">
                 <h2><i class="fas fa-link"></i> Quick Links</h2>
                 <div id="link-grid-main"></div>
             </div>
